[package]
name = "proxyswarm"
version = "0.2.0"
authors = ["Jorge Alejandro Jimenez Luna <jorgeajimenezl17@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
lto = true
# opt-level = "z"

[target.armv7-linux-androideabi.dependencies]
openssl = { version = "*", features = ["vendored"] }

[target.aarch64-linux-android.dependencies]
openssl = { version = "*", features = ["vendored"] }

[dependencies]
libc = "0.2"
clap = "4.1.6"
md5 = "0.7.0"
bytes = "1.4.0"
configparser = "3.0.2"
log4rs = "1.2.0"
log = "0.4.17"
rand = "0.8.5"
digest_auth = "0.3.1"
base64 = "0.21.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1.25.0", features = ["full"] }
http-body-util = "0.1.0-rc.2"
