[package]
name = "proxyswarm"
version = "0.3.6"
authors = ["Jorge Alejandro Jimenez Luna <jorgeajimenezl17@gmail.com>"]
edition = "2021"
description = "Proxyswarm is a tiny lightweight proxy that allows redirect HTTP(S) traffic through a proxy."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
lto = true
# opt-level = "z"

[dependencies]
libc = "0.2"
clap = { version = "4.3.4", features = ["cargo"] }
bytes = "1.4.0"
log4rs = "1.2.0"
log = "0.4.17"
digest_auth = "0.3.1"
base64 = "0.21.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1.25.0", features = ["full"] }
http-body-util = "0.1.0-rc.2"
config = { version = "0.13.3", default-features = false, features = ["ini"] }
thiserror = "1.0.40"
http = "0.2.9"
wildmatch = "2.1.1"
